# ArduinoIoTCloud

./: .codespellrc  .gitignore  .gitmodules  .travis.yml  ArduinoCloudProperty.cpp  ArduinoCloudProperty.h  ArduinoCloudProperty.hpp  ArduinoCloudProperty.ipp  ArduinoCloudPropertyBool.h  ArduinoCloudPropertyContainer.cpp  ArduinoCloudPropertyContainer.hpp  ArduinoCloudPropertyContainer.ipp  ArduinoCloudPropertyFloat.h  ArduinoCloudPropertyGeneric.h  ArduinoCloudPropertyInt.h  ArduinoCloudPropertyString.h  ArduinoCloudThing.cpp  ArduinoCloudThing.h  ArduinoCloudThingBase.h  LICENSE  README.md  keywords.txt  library.properties
.github/workflows/: check-arduino.yml  compile-examples.yml  compile-provisioning.yml  report-size-deltas.yml  spell-check.yml  sync-labels.yml  unit-tests.yml
BasicsLibrary/: ArduinoIoTCloud.cpp  ArduinoIoTCloud.h  Basics.cpp  BasicsLibrary.h  CloudSerial.cpp  CloudSerial.h  ConnectionManager.h  EthernetConnectionManager.cpp  EthernetConnectionManager.h  GSMConnectionManager.cpp  GSMConnectionManager.h  LICENSE  README.md  WiFiConnectionManager.cpp  WiFiConnectionManager.h  keywords.txt  library.properties
cbor/: ArduinoCloudProperty.h  ArduinoCloudThing.cpp
cbor/types/: CloudBool.h  CloudFloat.h  CloudLocation.h  CloudString.h
docs/: api.md  readme.md
examples/: MKRWIFI1010_Cloud_Blink.ino
examples/ArduinoIoTCloud-AWS-Basic/: ArduinoIoTCloud-AWS-Basic.ino  arduino_secrets.h  aws_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Advanced/: ArduinoIoTCloud-Advanced.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Basic/: ArduinoIoTCloud-Basic.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Basic-dynamic/: ArduinoIoTCloud-Basic-dynamic.ino  default_connection.cpp  thingProperties.h
examples/ArduinoIoTCloud-BlockForOTA/: ArduinoIoTCloud-BlockForOTA.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Callbacks/: ArduinoIoTCloud-Callbacks.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Client/: ArduinoIoTCloud-Client.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-DeferredOTA/: ArduinoIoTCloud-DeferredOTA.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-NetConfig/: thingProperties.h
examples/ArduinoIoTCloud-Notecard/: ArduinoIoTCloud-Notecard.ino  README.md  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-Schedule/: ArduinoIoTCloud-Schedule.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud-WiFiClient/: ArduinoIoTCloud-WiFiClient.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud_ESP8266/: ArduinoIoTCloud_ESP8266.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud_LED_switch/: ArduinoIoTCloud_LED_switch.ino  arduino_secrets.h  thingProperties.h
examples/ArduinoIoTCloud_Travis_CI/: ArduinoIoTCloud_Travis_CI.ino  arduino_secrets.h  thingProperties.h
examples/GSM_Cloud_Blink/: GSM_Cloud_Blink.ino
examples/MKR1000_Cloud_Blink/: MKR1000_Cloud_Blink.ino
examples/MKRWIFI1010_Cloud_Blink/: MKRWIFI1010_Cloud_Blink.ino
examples/MultiValue example/: MultiValue_example.ino
examples/MultiValue_example/: MultiValue_example.ino  arduino_secrets.h  thingProperties.h
examples/NB_Cloud_Blink/: arduino_secrets.h
examples/WiFi_Cloud_Blink/: WiFi_Cloud_Blink.ino  arduino_secrets.h
examples/WiFi_Cloud_Blink_with_security_credentials/: WiFi_Cloud_Blink_with_security_credentials.ino  arduino_secrets.h
examples/test_getting_started_10_02_ubi/: cloudProperties.h  test_getting_started_10_02_ubi.ino
examples/test_getting_started_18_01_ubi/: WiFi_MANAGER.h  arduino_secrets.h  cloudProperties.h  test_getting_started_18_01_ubi.ino
extras/: codespell-ignore-words-list.txt
extras/test/: CMakeLists.txt
extras/test/include/: Arduino.h  Arduino_ConnectionHandler.h  IPAddress.h  OTAStorage_Mock.h  OTATestData.h  TestUtil.h
extras/test/include/util/: CBORTestUtil.h  OTATestDataGenerator.h  OTATestUtil.h  PropertyTestUtil.h
extras/test/src/: Arduino.cpp  OTAStorage_Mock.cpp  OTATestData.cpp  TestUtil.cpp  test_CloudColor.cpp  test_CloudFloat.cpp  test_CloudLocation.cpp  test_CloudSchedule.cpp  test_CloudScheduler.cpp  test_CloudWrapperFloat.cpp  test_OTALogic.cpp  test_TimedAttempt.cpp  test_addPropertyReal.cpp  test_callback.cpp  test_command_decode.cpp  test_command_encode.cpp  test_decode.cpp  test_encode.cpp  test_main.cpp  test_publishEvery.cpp  test_publishOnChange.cpp  test_publishOnChangeRateLimit.cpp  test_readOnly.cpp  test_writeOnChange.cpp  test_writeOnDemand.cpp  test_writeOnly.cpp
extras/test/src/util/: CBORTestUtil.cpp  OTATestData.cpp  OTATestDataGenerator.cpp  OTATestUtil.cpp  PropertyTestUtil.cpp  TestUtil.cpp
extras/tools/: .gitignore  README.md  bin2base64.py  bin2json.py  bin2ota.py  lzss.c  lzss.dylib  lzss.py  ota-upload.sh
lib/: Network.cpp  Network.h
lib/ArduinoCbor/: .gitignore  (+4 more)
src/: AIoTC_Config.h  AIoTC_Const.h  AIoTC_Types.h  ArduinoBearSSLConfig.h  ArduinoClient.cpp  ArduinoCloud.cpp  ArduinoCloudV2.h  ArduinoECCX08Config.h  ArduinoIoTCloud.cpp  ArduinoIoTCloud.h  ArduinoIoTCloudDevice.cpp  ArduinoIoTCloudDevice.h  ArduinoIoTCloudLPWAN.cpp  ArduinoIoTCloudLPWAN.h  ArduinoIoTCloudNotecard.cpp  ArduinoIoTCloudNotecard.h  ArduinoIoTCloudTCP.cpp  ArduinoIoTCloudTCP.h  ArduinoIoTCloudTCPThing.cpp  ArduinoIoTCloudTCPThing.h  ArduinoIoTCloudThing.cpp  ArduinoIoTCloudThing.h  ArduinoIoTCloud_Config.h  ArduinoIoTCloud_Defines.h  CloudSerial.cpp  CloudSerial.h  ConnectionManager.h  EthernetConnectionManager.cpp  EthernetConnectionManager.h  GSMConnectionManager.cpp  GSMConnectionManager.h  OTAStorage.h  SerialFlashStorage.cpp  SerialFlashStorage.h  WiFiConnectionManager.cpp  WiFiConnectionManager.h
types/: CloudBool.h  CloudColor.h  CloudFloat.h  CloudInt.h  CloudLocation.h  CloudString.h  CloudWrapperBase.h  CloudWrapperBool.h  CloudWrapperFloat.h  CloudWrapperInt.h  CloudWrapperString.h
valuetypes/: CloudBool.h  CloudFloat.h  CloudInt.h  CloudString.h  CloudWrapperBool.h  CloudWrapperFloat.h  CloudWrapperInt.h  CloudWrapperString.h
(+548 files in other folders)
